# pyphoenix

./: .gitignore  .python-version  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/source/: changelog.rst  conf.py  deployment.rst  index.rst  quickstart.rst
docs/source/api/: channel.rst  index.rst  phoenix.rst
docs/source/api/modules/: pyphoenix.channel.rst  pyphoenix.client.rst  pyphoenix.config.rst  pyphoenix.exceptions.rst  pyphoenix.message_queue.rst  pyphoenix.metrics.rst  pyphoenix.middleware.rst  pyphoenix.phoenix.rst  pyphoenix.presence.rst  pyphoenix.pubsub.rst  pyphoenix.rst  pyphoenix.serializers.rst  pyphoenix.socket.rst  pyphoenix.types.rst
docs/source/examples/: index.rst
docs/source/user_guide/: concepts.rst  index.rst
examples/: advanced_server.py  basic_server.py  basic_websocket_client.py  basic_websocket_server.py  target_chat_client.py  target_chat_server.py
src/pyphoenix/: __init__.py  channel.py  client.py  config.py  exceptions.py  message_queue.py  metrics.py  middleware.py  phoenix.py  presence.py  pubsub.py  serializers.py  socket.py  types.py
tests/: test_basic_functionality.py  test_broadcasting.py  test_client_examples.py  test_phoenix_integration.py  test_presence_methods.py  test_websocket_integration.py
